# godmode

./: BUILD.bazel  Makefile  README.md  god_mode.c
test_progr/: Makefile  test  test.c
